--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@ title: Paul Cheng
 description: Analyst Developer at ICBC Standard Bank
 owner:
   name: Paul Cheng # or company name
-  url: "http://www.paulcheng.london" # your URL
-first_published: 2018 # if migrating another site, the year of your first publish
+  url: "http://www.paulcheng.co.uk" # your URL
+first_published: 2019 # if migrating another site, the year of your first publish
                       # Must be a 4-digit integer year (math is used on it)
-url: "http://www.paulcheng.london" # the base hostname & protocol for this site
+url: "http://www.paulcheng.co.uk" # the base hostname & protocol for this site
 baseurl: "" # the subpath of your site, e.g. /blog
             # Note you'll have to move your robots.txt to the root if you want it used.
             # And list multiple sitemaps if there are other subdirectories you want indexed
